# ExamFocus

./: What_is_Exam_Focus (1).md  What_is_Exam_Focus.md  What_is_Exam_Focus_Document.md  transformation_plan_II.H.1.json
agents/: README.md  agent-1-past-paper-analyzer.md  agent-2-topic-researcher.md  agent-2b-treaty-research.md  agent-3-chapter-planner.md  agent-4-chapter-drafter.md  agent-4.1-transformation-planner.md  agent-4.2-chapter-transformer.md  agent-5a-content-accuracy.md  agent-5b-consistency-flow.md  agent-5c-structural-refinement.md  agent-5d-discussion-enhancement.md  agent-6-ebook-assembler.md  prompt-guide.md  prompt-transformation.md  supervisor-checklist.md
chapters/: chapter-12-3-interest-article-11.md
prompts/: README.md  prompt-1-past-paper-analyzer.md  prompt-2-topic-researcher.md  prompt-2b-treaty-research.md  prompt-3-chapter-planner.md  prompt-4-chapter-drafter.md  (+10 more)
real_agents/: .env.example  README.md  __init__.py  cli.py  config.py  pyproject.toml
real_agents/agents/: __init__.py  base.py  chapter_drafter.py  chapter_planner.py  chapter_transformer.py  past_paper_analyzer.py  qa_accuracy.py  qa_consistency.py  qa_discussion.py  qa_structural.py  topic_researcher.py  transformation_planner.py  treaty_researcher.py
real_agents/models/: __init__.py  chapter.py  exam_intelligence.py  qa.py  research.py  transformation.py  treaty_research.py
real_agents/pipeline/: __init__.py  orchestrator.py  quality_gates.py
real_agents/tools/: __init__.py  file_tools.py  web_tools.py
real_agents/utils/: __init__.py  logging.py  parsing.py
(+225 files in other folders)
