[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "examfocus-agents"
version = "1.0.0"
description = "Multi-agent content creation pipeline for ExamFocus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
examfocus = "real_agents.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["real_agents"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
